"Fixed" issues in IE by removing PIE.htc behaviour from critical places 1. iconbar hover effect lagged awfully behind 2. messages and boxes began to fall apart when an element styled by PIE.htc was scrolled out of the #content div This might be a bug in PIE.htc, need to check and report upstream, if so.
We are now back to edged uglyness without pretty box shadows, but usability has to be dominant until we find a proper fix
NOTE: border-radius.htc does not work on iconbar buttons, it totally messes them up!

--- a/webcit/static/styles/iconbar.css
+++ b/webcit/static/styles/iconbar.css
@@ -80,7 +80,6 @@ div.iconbar_text select { border: 1px solid #424b5; }
 	-khtml-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
-	behavior: url(static/styles/PIE.htc);
  }
 
 .logo, #citlogo, .iconbar_text, #online_users li {
